--- a/code/JIF.CMS/JIF.CMS.Management/Views/Article/CategoryInfo.cshtml
+++ b/code/JIF.CMS/JIF.CMS.Management/Views/Article/CategoryInfo.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     Layout = null;
 
-    var categories = ViewBag.Categories as List<JIF.CMS.Core.Domain.TreeRelationObjectSortArray<JIF.CMS.Core.Domain.Articles.ArticleCategory>>;
+    var categories = ViewBag.Categories as List<JIF.CMS.Core.Domain.TreeRelationObjectTraverseWrapper<JIF.CMS.Core.Domain.Articles.ArticleCategory>>;
 }
 <div>
     <div class="form-group">
@@ -11,7 +11,7 @@
 
             @foreach (var cate in categories)
             {
-                <option value="@cate.Current.Id">@cate.Current.Name</option>
+                <option value="@cate.Current.Id">@cate.Level - @cate.Current.Name</option>
             }
         </select>
     </div>
