--- a/code/JIF.CMS/JIF.CMS.Management/Views/Article/Index.cshtml
+++ b/code/JIF.CMS/JIF.CMS.Management/Views/Article/Index.cshtml
@@ -4,6 +4,11 @@
     var articles = ViewBag.list as IPagedList<JIF.CMS.Services.Articles.Dtos.SearchArticleListOutput>;
 }
 
+<div class="row">
+    <h1>@ViewBag.AttachmentUploadFTPAddress</h1>
+    <h1>@ViewBag.AttachmentUploadFTPAccount</h1>
+    <h1>@ViewBag.AttachmentUploadFTPPwd</h1>
+</div>
 
 <div class="row">
     <div class="col-md-12">
