--- a/code/JIF.CMS/JIF.CMS.Management/Views/Attachment/Index.cshtml
+++ b/code/JIF.CMS/JIF.CMS.Management/Views/Attachment/Index.cshtml
@@ -114,9 +114,7 @@
 
 @section Scripts {
     <script src="~/Content/doT/doT.min.js"></script>
-
-    @Scripts.Render("~/scripts/web-uploader")
-    @Scripts.Render("~/scripts/page/attachment")
+    @Scripts.Render("~/scripts/web-uploader", "~/scripts/page/attachment")
 }
 
 
